# productivity_coach

./: .gitignore  README.md  pyproject.toml
coach/: Coach.py  __init__.py  achievements.py  config.py  database.py  prefs.py
coach/core/: agent.py  capture.py  scheduler.py  session_controller.py  session_state.py
coach/integrations/: fitbit.py  input_monitor.py  notify.py  spotify.py  tts.py
coach/pages/: 1_History.py  2_LLM_Log.py  3_Session_Insights.py  4_Achievements.py  4_Settings.py  5_Achievements.py  5_Settings.py
coach/ui/: components.py  sounds.py  theme.py  utils.py
docs/: SETUP.md
